Added homepage property and predeploy scripts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-desk",
   "version": "0.1.0",
+  "homepage": "https://lauraehiller.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@react-three/drei": "^9.40.4",
@@ -13,6 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,6 +41,7 @@
   },
   "devDependencies": {
     "babel-plugin-glsl": "^1.0.0",
+    "gh-pages": "^4.0.0",
     "glslify": "^7.1.1"
   }
 }
